--- a/app/src/main/res/layout/fragment_register_profile.xml
+++ b/app/src/main/res/layout/fragment_register_profile.xml
@@ -13,21 +13,31 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
                 android:text="Profile"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:layout_marginRight="8dp"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:baselineAligned="false"
                 android:text="(Required)"
                 android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login" />
         </LinearLayout>
 
         <LinearLayout
@@ -41,7 +51,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_gray"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
