--- a/app/src/main/res/layout/fragment_register_home.xml
+++ b/app/src/main/res/layout/fragment_register_home.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_gray"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
