--- a/app/src/main/res/layout/user_address_card_view.xml
+++ b/app/src/main/res/layout/user_address_card_view.xml
@@ -32,8 +32,6 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="10dp"
                 android:id="@+id/addressTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,8 +40,12 @@
                 android:padding="8dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
+                android:maxLines="1"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:focusable="true"
+                android:focusableInTouchMode="true" />
+
 
             <TextView
                 android:id="@+id/isDefaultTextView"
