--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="30dp"
+
+        >
     <LinearLayout
         android:layout_width="220dp"
         android:layout_height="wrap_content"
@@ -63,4 +69,5 @@
             android:layout_height="wrap_content"
             android:text="Book now"/>
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
