--- a/app/src/main/res/layout/fragment_register_profile.xml
+++ b/app/src/main/res/layout/fragment_register_profile.xml
@@ -127,7 +127,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical">
@@ -166,6 +166,14 @@
 
 
                     </RadioGroup>
+                    <EditText
+                        android:id="@+id/set_error_edit_text"
+                        android:layout_width="75dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/set_error_edit_text"
+                        android:enabled="false">
+
+                    </EditText>
                 </LinearLayout>
 
                 <TextView
