--- a/app/src/main/res/layout/user_sos_card_view.xml
+++ b/app/src/main/res/layout/user_sos_card_view.xml
@@ -4,8 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
-    android:id="@+id/address_list_container"
+    android:id="@+id/sos_list_container"
+    app:cardCornerRadius="20dp"
     app:cardElevation="8dp"
+    android:padding="50dp"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -13,22 +15,51 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/sos_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="5dp"
+                android:text="Name"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:padding="10dp"
+                android:textSize="18sp" />
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sos_phone_number"
+                android:text="phone"
+                android:textStyle="bold"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:textSize="16sp">
+
+            </TextView>
             <TextView
                 android:id="@+id/isDefaultTextView"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="Trung"
                 android:layout_marginTop="5dp"
                 android:padding="5dp"
-                android:textSize="18sp" />
+
+                android:textSize="18sp"
+                android:textColor="@color/light_orange_red"
+                >
+
+            </TextView>
+
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_vertical">
@@ -40,30 +71,35 @@
                 android:gravity="bottom">
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/setDefaultBtn"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
+
                     android:text="Set as default"
                     >
 
                 </com.google.android.material.button.MaterialButton>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="5dp">
                     <Button
                         android:id="@+id/edit_button"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Edit"
+                        android:padding="10dp"
                         android:layout_weight="1"
                         android:layout_marginRight="8dp"
                         android:backgroundTint="@color/quantum_googgreen"/>
                     <Button
                         android:id="@+id/delete_button"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Delete"
+
                         android:layout_weight="1"
                         android:layout_marginLeft="8dp"
                         android:backgroundTint="@color/light_orange_red"/>
