--- a/app/src/main/res/layout/fragment_confirm_booking.xml
+++ b/app/src/main/res/layout/fragment_confirm_booking.xml
@@ -312,32 +312,38 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
+                        android:orientation="horizontal"
                         android:padding="8dp">
 
-                        <LinearLayout
+                        <RadioGroup
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <TextView
+                            android:layout_weight="1">
+                            <RadioButton
                                 android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="Card: "
-                                android:textSize="16sp"
-                                android:textStyle="bold"
-                                android:gravity="center_vertical"/>
-
-                            <TextView
+                                android:layout_height="wrap_content"
                                 android:id="@+id/card"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
                                 android:text="Card"
-                                android:layout_weight="1"
-                                android:gravity="center_vertical">
-
-                            </TextView>
-
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                            <RadioButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/cash"
+                                android:text="Cash"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </RadioGroup>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:background="@android:color/transparent"
+                                android:padding="8dp"
+                                android:src="@drawable/ic_chevron_right" />
                             <ImageView
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
