--- a/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/app/src/main/res/layout/fragment_booking_detail.xml
@@ -700,6 +700,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <Button
+            android:id="@+id/help_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Help"
