--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     android:gravity="center_vertical"
     tools:context=".Activities.LoginActivity"
-    android:background="@color/background_color_blue">
+    android:background="@color/background_color_blue"
+    android:id="@+id/login_background"
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -134,6 +136,7 @@
                 android:gravity="center_horizontal"
                 android:layout_marginTop="-20dp">
                 <TextView
+                    android:id="@+id/forget_password_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/forgot_your_password"
