--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -95,17 +95,17 @@
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
-                        <EditText
+                        <TextView
                             android:id="@+id/email"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
-                            android:background="@drawable/custom_edit_text"
+                            android:textSize="18sp"
                             android:padding="10dp"
                             android:text="Email">
 
-                        </EditText>
+                        </TextView>
                     </LinearLayout>
 
                     <LinearLayout
@@ -262,7 +262,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Name: "
+                        android:text="Plate: "
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
