--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.Fragment.AboutUs.AboutUsActivity"
+    tools:context=".Activities.Main.Fragment.Profile.AboutUs.AboutUsActivity"
     >
     <LinearLayout
         android:layout_width="match_parent"
