--- a/app/src/main/res/layout/fragment_main_booking.xml
+++ b/app/src/main/res/layout/fragment_main_booking.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.Fragment.MainBookingFragment">
+    tools:context=".Activities.Main.Fragment.Booking.MainBookingFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
