--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -347,9 +347,10 @@
                     android:id="@+id/edit_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Edit"
+                    android:text="@string/edit"
                     android:layout_marginHorizontal="8dp"
-                    android:layout_marginBottom="40dp"/>
+                    android:layout_marginBottom="40dp"
+                    android:backgroundTint="@color/secondary_stroke_blue"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
