--- a/app/src/main/res/layout/fragment_register_account.xml
+++ b/app/src/main/res/layout/fragment_register_account.xml
@@ -80,8 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="16dp"
-                    android:fontFamily="@font/lobster"
-
+                    android:fontFamily="@font/queensidesmedium"
                     android:text="Create New Account"
                     android:textAlignment="center"
                     android:textSize="22sp"
@@ -189,8 +188,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:text="Done"
-                    android:layout_marginBottom="50dp"/>
+                    android:layout_marginBottom="30dp"
+                    android:text="@string/done"
+                    app:backgroundTint="@color/secondary_stroke_blue"/>
 
             </LinearLayout>
             </ScrollView>
