--- a/app/src/main/res/layout/fragment_register_home.xml
+++ b/app/src/main/res/layout/fragment_register_home.xml
@@ -142,8 +142,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:text="Done"
-                    android:layout_marginBottom="50dp"/>
+                    android:layout_marginBottom="30dp"
+                    android:text="@string/next"
+                    app:backgroundTint="@color/secondary_stroke_blue"/>
+
+
 
             </LinearLayout>
             </ScrollView>
