--- a/app/src/main/res/layout/fragment_register_sos.xml
+++ b/app/src/main/res/layout/fragment_register_sos.xml
@@ -70,10 +70,10 @@
                     android:layout_height="wrap_content"
                     android:text="SOS"
                     android:textSize="30sp"
-                    android:fontFamily="@font/lobster"
+                    android:fontFamily="@font/queensidesmedium"
                     android:textStyle="bold"
                     android:textAlignment="center"
-                    android:layout_marginVertical="16dp"/>
+                    android:layout_marginVertical="16dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -144,7 +144,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:text="Done"/>
+                    android:layout_marginBottom="30dp"
+                    android:text="@string/next"
+                    app:backgroundTint="@color/secondary_stroke_blue"/>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
