--- a/app/src/main/res/layout/fragment_register_vehicle.xml
+++ b/app/src/main/res/layout/fragment_register_vehicle.xml
@@ -74,7 +74,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="16dp"
-                        android:fontFamily="@font/lobster"
+                        android:fontFamily="@font/queensidesmedium"
                         android:text="Vehicle"
                         android:textAlignment="center"
                         android:textSize="30sp"
@@ -271,8 +271,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="48dp"
-                        android:text="Done" />
+                        android:layout_marginBottom="30dp"
+                        android:text="@string/next"
+                        app:backgroundTint="@color/secondary_stroke_blue" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
