--- a/app/src/main/res/layout/fragment_register_home.xml
+++ b/app/src/main/res/layout/fragment_register_home.xml
@@ -19,14 +19,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="@string/home"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:layout_marginRight="8dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(Required)"
+                android:text="@string/required"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -72,8 +72,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Home"
-                    android:fontFamily="@font/lobster"
+                    android:text="@string/home"
+                    android:fontFamily="@font/queensidesmedium"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:textAlignment="center"
@@ -82,7 +82,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Please enter your home detail. \nYou can edit this in the app later."
+                    android:text="@string/home_heading"
                     android:textSize="16sp"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="20dp"/>
@@ -90,7 +90,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Address (*)"
+                    android:text="@string/address_star"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
@@ -107,7 +107,7 @@
                         android:id="@+id/address_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Address"
+                        android:hint="@string/address"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
                         android:drawableLeft="@drawable/ic_home"
@@ -118,7 +118,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Image"
+                    android:text="@string/image"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
