--- a/app/src/main/res/layout/fragment_register_account.xml
+++ b/app/src/main/res/layout/fragment_register_account.xml
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:text="Account"
+                android:text="@string/account"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:baselineAligned="false"
-                android:text="(Required)"
+                android:text="@string/required"
                 android:textSize="16sp" />
 
         </LinearLayout>
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="16dp"
                     android:fontFamily="@font/queensidesmedium"
-                    android:text="Create New Account"
+                    android:text="@string/new_account"
                     android:textAlignment="center"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -89,14 +89,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Please enter an unique Email and enter a password to create a new account."
+                    android:text="@string/Account_heading"
                     android:textSize="16sp"
                     android:layout_marginHorizontal="16dp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Email (*)"
+                    android:text="@string/email_star"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:padding="5dp"
@@ -114,7 +114,7 @@
                         android:id="@+id/email_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Email"
+                        android:hint="@string/email"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
                         android:drawablePadding="5dp"
@@ -125,7 +125,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Password (*)"
+                    android:text="@string/password_star"
                     android:padding="5dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -143,7 +143,7 @@
                         android:id="@+id/password_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Password"
+                        android:hint="@string/password"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
                         android:drawablePadding="5dp"
@@ -156,7 +156,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Confirm Password (*)"
+                    android:text="@string/confirm_password_star"
                     android:padding="5dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -174,7 +174,7 @@
                         android:id="@+id/confirm_password_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Confirm Password"
+                        android:hint="@string/confirm_password"
                         android:textSize="18sp"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
