--- a/app/src/main/res/layout/fragment_register_profile.xml
+++ b/app/src/main/res/layout/fragment_register_profile.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:baselineAligned="false"
-                android:text="(Required)"
+                android:text="@string/required"
                 android:textSize="16sp" />
 
 
@@ -81,7 +81,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Profile"
+                    android:text="@string/profile"
                     android:fontFamily="@font/queensidesmedium"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -92,7 +92,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Please enter your name, gender and phone number. \nYou can edit these in the app later."
+                    android:text="@string/profile_heading"
                     android:textSize="16sp"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="10dp"
@@ -101,7 +101,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name (*)"
+                    android:text="@string/name_star"
                     android:padding="5dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -120,7 +120,9 @@
                         android:id="@+id/name_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name"
+                        android:hint="@string/name"
+                        android:drawableStart="@drawable/ic_name24"
+                        android:drawablePadding="5dp"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
                         android:textSize="18sp"/>
@@ -134,7 +136,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Gender:"
+                        android:text="@string/gender"
                         android:padding="5dp"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -147,22 +149,25 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginVertical="8dp">
+                        android:layout_marginVertical="8dp"
+                        >
 
                         <RadioButton
                             android:id="@+id/radioButtonMale"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Male"
-                            android:textSize="16sp" />
+                            android:text="@string/male"
+                            android:textSize="16sp"
+                            app:buttonTint="@color/secondary_stroke_blue"/>
 
                         <RadioButton
                             android:id="@+id/radioButtonFemale"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Female"
+                            android:text="@string/female"
                             android:textSize="16sp"
-                            android:layout_marginStart="16dp" />
+                            android:layout_marginStart="16dp"
+                            app:buttonTint="@color/secondary_stroke_blue"/>
 
 
                     </RadioGroup>
@@ -179,7 +184,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number (*)"
+                    android:text="@string/phone_number_star"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
@@ -197,8 +202,8 @@
                         android:id="@+id/phone_number_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Phone Number"
-                        android:drawableLeft="@drawable/baseline_local_phone_24"
+                        android:hint="@string/phone_number"
+                        android:drawableStart="@drawable/baseline_local_phone_24"
                         android:drawablePadding="5dp"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
