--- a/app/src/main/res/layout/fragment_register_sos.xml
+++ b/app/src/main/res/layout/fragment_register_sos.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(Optional)"
+                android:text="@string/optional"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -78,7 +78,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Enter an Emergency Contact. \nYou can share your live location and Driver Detail when you initiate the SOS action. \nYou can skip this for now and edit it in the app later."
+                    android:text="@string/Sos_heading"
                     android:textSize="16sp"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="20dp"/>
@@ -88,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:padding="5dp"
-                    android:text="Name (*)"
+                    android:text="@string/name_star"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -103,7 +103,7 @@
                         android:id="@+id/name_sos_editText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name"
+                        android:hint="@string/name"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
                         android:drawablePadding="5dp"
@@ -113,7 +113,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number (*)"
+                    android:text="@string/phone_number_star"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginHorizontal="16dp"
@@ -129,10 +129,10 @@
                         android:id="@+id/sos_phone_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Phone Number"
+                        android:hint="@string/phone_number"
                         android:background="@drawable/custom_edit_text"
                         android:padding="10dp"
-                        android:drawableLeft="@drawable/baseline_local_phone_24"
+                        android:drawableStart="@drawable/baseline_local_phone_24"
                         android:drawablePadding="5dp"
                         android:textSize="18sp"
                         android:inputType="number"/>
