--- a/app/src/main/res/layout/fragment_register_home.xml
+++ b/app/src/main/res/layout/fragment_register_home.xml
@@ -103,7 +103,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="16dp"
                     app:cardCornerRadius="30dp">
-                    <EditText
+                    <TextView
                         android:id="@+id/address_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
